--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,8 @@
 
 /*footer*/
 .footer-bb {
-  background-color: #a3a3a3; }
+  background-color: #a3a3a3;
+  height: 250px; }
 
 .referenciaFinal {
   padding: 10px;
@@ -88,6 +89,18 @@ footer .instagram {
 footer .facebook {
   color: #21217e; }
 
+.whatsapp {
+  display: flex;
+  flex-direction: column; }
+
+.instagram {
+  display: flex;
+  flex-direction: column; }
+
+.facebook {
+  display: flex;
+  flex-direction: column; }
+
 /*media query index */
 @media (min-width: 360px) and (max-width: 578px) {
   .slide img {
@@ -103,7 +116,8 @@ footer .facebook {
     background-color: #a3a3a3;
     flex-direction: column;
     align-items: center;
-    margin: 0px; }
+    margin: 0px;
+    height: max-content; }
   .referenciaFinal {
     padding: 5px;
     flex-direction: column;
@@ -351,7 +365,7 @@ footer .facebook {
   margin-top: 10px;
   display: flex;
   justify-content: center;
-  padding: 5px; }
+  padding: 15px; }
 
 .containerParrafo {
   display: flex;
