--- a/scss/utilidades/_mixin.scss
+++ b/scss/utilidades/_mixin.scss
@@ -14,3 +14,7 @@
         display: flex;
         justify-content: center;
 }
+@mixin redes{
+        display: flex;
+        flex-direction: column;
+}
