--- a/css/styles.css
+++ b/css/styles.css
@@ -57,11 +57,10 @@
 
 /*footer*/
 .footer-bb {
-  background-color: #a3a3a3;
-  height: 250px; }
+  background-color: #a3a3a3; }
 
 .referenciaFinal {
-  padding: 10px;
+  padding: 0px;
   justify-content: space-around; }
 
 .container-card {
@@ -116,8 +115,7 @@ footer .facebook {
     background-color: #a3a3a3;
     flex-direction: column;
     align-items: center;
-    margin: 0px;
-    height: max-content; }
+    margin: 0px; }
   .referenciaFinal {
     padding: 5px;
     flex-direction: column;
