--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,24 @@
   box-sizing: border-box;
   transition: 0.5; }
 
+.button, .beba {
+  padding: 5px 20px 5px 20px;
+  margin: 5px;
+  border-radius: 5px;
+  border-radius: 5px;
+  font-size: large;
+  border-color: #72a3a3; }
+
+.beba {
+  background-color: #79b4b4; }
+  .beba a {
+    text-decoration: none;
+    color: white; }
+  .beba:hover {
+    background-color: #69d4d4;
+    box-shadow: 1px 1px 2px black;
+    transform: scale(0.9); }
+
 .titulo-pagina {
   background-color: #46bbbb; }
 
@@ -47,26 +65,9 @@ body {
   justify-content: space-around; }
 
 .container .buttons {
-  margin-top: 10px;
+  margin: 10px;
   display: flex;
   justify-content: center; }
-
-.button-beba {
-  padding: 5px 20px 5px 20px;
-  margin: 5px;
-  background-color: #79b4b4;
-  border-radius: 5px;
-  font-size: large;
-  border-color: #72a3a3; }
-
-.button-beba:hover {
-  background-color: #69d4d4;
-  box-shadow: 1px 1px 2px black;
-  transform: scale(0.9); }
-
-.button-beba a {
-  text-decoration: none;
-  color: white; }
 
 /*footer*/
 footer {
@@ -130,7 +131,7 @@ footer {
   opacity: 0.3;
   text-align: center; }
 
-/*media query index */
+/*MEDIA QUERY INDEX*/
 @media (min-width: 360px) and (max-width: 578px) {
   .slide img {
     height: 40vh; }
@@ -144,13 +145,17 @@ footer {
     flex-direction: column;
     align-items: center; }
     .container-card .card {
+      margin-top: 5px;
       align-items: center; } }
 
 @media (min-width: 578px) and (max-width: 920px) {
   .slide img {
     height: 50vh; }
-  .container-card .card {
-    margin: 8px; } }
+  .container-card {
+    margin: 12px;
+    flex-wrap: wrap; }
+  .card {
+    margin-top: 5px; } }
 
 @media (min-width: 920px) and (max-width: 1216px) {
   .container-card .card {
@@ -186,7 +191,7 @@ footer {
     flex-wrap: wrap;
     text-align: center;
     grid-area: main-bg; }
-  .contain .footer-bb {
+  .contain footer {
     grid-area: footer-bg;
     margin: 0px;
     flex-wrap: wrap; }
@@ -212,7 +217,7 @@ footer {
   flex-direction: column;
   align-items: center; }
 
-/*media query baby girl */
+/*MEDIA QUERY BABY-GIRL */
 @media (min-width: 360px) and (max-width: 578px) {
   .contain {
     display: grid;
@@ -230,10 +235,6 @@ footer {
     margin-top: 10px;
     padding: 15px;
     margin: 5px; }
-  .footer-bb {
-    display: flex;
-    margin: 0px;
-    padding: 0px; }
   .section-bg .descripcion-producto {
     display: block; }
   .parrafo {
@@ -288,9 +289,8 @@ footer {
     grid-area: main-bb; }
   .contain-bb .section-bb {
     grid-area: section-bb; }
-  .contain-bb .footer-bb {
-    grid-area: footer-bb;
-    flex-wrap: wrap; }
+  .contain-bb footer {
+    grid-area: footer-bb; }
 
 .container-1 {
   text-align: center;
@@ -298,7 +298,7 @@ footer {
   background-color: #a3a3a3;
   margin-right: 2px; }
   .container-1 .texto-bb {
-    font-size: 30px; }
+    font-size: 25px; }
   .container-1 img {
     border-radius: 5px;
     margin: 10px;
@@ -310,14 +310,15 @@ footer {
   background-color: #a3a3a3; }
   .section-bb img {
     border-radius: 5px;
-    margin: 10px;
+    margin: 15px;
     align-items: center;
-    justify-content: center; }
+    justify-content: center;
+    margin-top: 20px; }
   .section-bb .texto-bb {
-    font-size: 30px;
+    font-size: 25px;
     margin: 0px; }
 
-/*media query  pagina baby boy */
+/*MEDIA QUERY BABY BOY */
 @media (min-width: 360px) and (max-width: 578px) {
   .contain-bb {
     display: grid;
@@ -360,22 +361,22 @@ footer {
 
 @media (min-width: 920px) and (max-width: 1250px) {
   .contain-bb {
-    display: grid;
-    flex-wrap: wrap;
     flex-direction: row;
     grid-template-columns: 2fr auto 2fr auto;
     grid-template-rows: 0.2fr auto 2fr auto;
-    grid-template-areas: "header-bb header-bb header-bb header-bb" "main-bb main-bb section-bb section-bb" "main-bb main-bb section-bb section-bb" "footer-bb footer-bb footer-bb footer-bb"; }
-  .texto-bb {
-    font-size: 30px;
+    grid-template-areas: "header-bb  header-bb   header-bb    header-bb" "main-bb    main-bb     section-bb   section-bb" "main-bb    main-bb     section-bb   section-bb" "footer-bb  footer-bb   footer-bb    footer-bb"; }
+  .container-1 .texto-bb {
+    padding: 10px;
+    font-size: 25px;
     flex-wrap: wrap;
     margin: 0px;
-    padding: 10px; }
+    padding: 20px; }
   .section-bb {
+    padding: 10px;
     text-align: center;
     flex-wrap: wrap; }
     .section-bb .texto-bb {
-      font-size: 30px;
+      font-size: 25px;
       margin: 0px;
       flex-wrap: wrap; } }
 
