--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,6 +26,7 @@
                }
                         }
     }   
+
 .nav-direction {
     background-color: $color-nav;
     padding: 5px 20px 5px 20px;
@@ -64,28 +65,12 @@ body {
 }
 
 .container .buttons {
-    margin-top: 10px;
+    margin: 10px;
     display: flex;
     justify-content: center;
 }
 
-.button-beba {
-    padding: 5px 20px 5px 20px;
-    margin: 5px;
-    background-color: rgb(121, 180, 180);
-    border-radius: 5px;
-    font-size: large;
-    border-color: $color-nav-button;
-}
-.button-beba:hover {
-    background-color: rgb(105, 212, 212);
-    box-shadow: 1px 1px 2px black;
-    transform: scale(0.9);
-}
-.button-beba a {
-    text-decoration: none;
-    color: $color-nav;
-}
+
 /*footer*/
 footer {
     width: 100%;
@@ -159,7 +144,8 @@ footer {
     opacity: 0.3;
     text-align: center;
 }
-/*media query index */
+/*MEDIA QUERY INDEX*/
+
 @media (min-width:360px) and (max-width:578px) {
     .slide img {
         height: 40vh;
@@ -173,25 +159,32 @@ footer {
         flex-direction: column;
         align-items: center;
         .card{
+            margin-top: 5px;
             align-items: center;
         }
     }
-   
      }
+
 @media (min-width:578px) and (max-width:920px) {
     .slide img {
         height: 50vh;
     }
-    .container-card .card {
-        margin: 8px;
+    .container-card {
+        margin: 12px;
+        flex-wrap: wrap;
+    }
+    .card{
+        margin-top: 5px;
     }
 }
+
+
 @media (min-width:920px) and (max-width:1216px) {
     .container-card .card {
         margin: 8px;
     }
 }
-//baby girl
+//BABY GIRL
 .vestido-fantasia {
     margin: 10px;
     border-radius: 5px;
@@ -226,7 +219,7 @@ footer {
             text-align: center;
             grid-area: main-bg;
         } 
-        .footer-bb {
+        footer {
             grid-area: footer-bg;
             margin: 0px;
             flex-wrap: wrap;
@@ -254,7 +247,10 @@ footer {
 .section-bg .descripcion-producto {
    @include flex;
 }
-/*media query baby girl */
+
+/*MEDIA QUERY BABY-GIRL */
+
+
 @media (min-width:360px) and (max-width:578px) {
     .contain {
         display: grid;
@@ -281,11 +277,6 @@ footer {
         padding: 15px;
         margin: 5px;
     }
-    .footer-bb {
-        display: flex;
-        margin: 0px;
-        padding: 0px;
-    }
     .section-bg{
         .descripcion-producto {
             display: block;
@@ -297,9 +288,9 @@ footer {
         margin: 5px;
     }
 }
+
 @media (min-width:578px) and (max-width:920px) {
     .contain {
-
         grid-template-columns: 1fr 4fr auto;
         grid-template-rows: 0.2fr 4fr auto;
         grid-template-areas:
@@ -313,6 +304,7 @@ footer {
         align-items: center;
     }
 }
+
 @media (min-width:920px) and (max-width:1216px) {
     .contain {
         display: grid;
@@ -337,13 +329,17 @@ footer {
         margin-top: 5px;
     }
 }
-//baby boy
+
+//BABY BOY
+
 .conjunto-niño {
 @include medidas(300px, 300px);
 }
+
 .conjunto-bohemio {
  @include medidas(300px, 300px);
 }
+
 .contain-bb {
     display: grid;
     grid-template-columns: 2fr 2fr 1fr 1fr;
@@ -365,10 +361,10 @@ footer {
 .section-bb {
     grid-area: section-bb;
 }
-.footer-bb {
+footer {
     grid-area: footer-bb;
-    flex-wrap: wrap;
 }
+
 }
 .container-1 {
     text-align: center;
@@ -376,7 +372,7 @@ footer {
     background-color: $color-footer;
     margin-right: 2px;
         .texto-bb {
-            font-size: 30px;
+            font-size: 25px;
             }
          img {
             border-radius: 5px;
@@ -384,23 +380,26 @@ footer {
             align-items: center;
         }             
 }
+
 .section-bb {
     text-align: center;
     border: 2px solid black;
     background-color: $color-footer;
-    img {
+     img {
         border-radius: 5px;
-        margin: 10px;
+        margin: 15px;
         align-items: center;
         justify-content: center;
+        margin-top: 20px;
         }
   .texto-bb {
-      font-size: 30px;
+      font-size: 25px;
       margin: 0px;
   }
 }
 
-/*media query  pagina baby boy */
+/*MEDIA QUERY BABY BOY */
+
 @media (min-width:360px) and (max-width:578px) {
     .contain-bb {
         display: grid;
@@ -413,6 +412,7 @@ footer {
             "section-bb section-bb "
             "footer-bb footer-bb";
     }
+
 .container-1 {
     margin:0px;
     border: 1px solid black;
@@ -444,6 +444,7 @@ footer {
     }
 }
 }
+
 @media (min-width:578px) and (max-width:920px) {
     .contain-bb {
         display: grid;
@@ -457,37 +458,44 @@ footer {
             "footer-bb footer-bb footer-bb";
     }
           }
+
+
 @media (min-width:920px) and (max-width:1250px) {
     .contain-bb {
-        display: grid;
-        flex-wrap: wrap;
         flex-direction: row;
         grid-template-columns: 2fr auto 2fr auto;
         grid-template-rows: 0.2fr auto 2fr auto;
         grid-template-areas:
-            "header-bb header-bb header-bb header-bb"
-                "main-bb main-bb section-bb section-bb"
-                "main-bb main-bb section-bb section-bb"
-                "footer-bb footer-bb footer-bb footer-bb";
+            "header-bb  header-bb   header-bb    header-bb"
+            "main-bb    main-bb     section-bb   section-bb"
+            "main-bb    main-bb     section-bb   section-bb"
+            "footer-bb  footer-bb   footer-bb    footer-bb";
 }
- .texto-bb {
-     font-size: 30px;
-     flex-wrap: wrap;
-     margin: 0px;
-     padding: 10px;
+
+ .container-1 {
+    .texto-bb{
+    padding: 10px;
+    font-size: 25px;
+    flex-wrap: wrap;
+    margin: 0px;
+    padding: 20px;
+ }
  }
 
+
 .section-bb {
+        padding: 10px;
         text-align: center;
         flex-wrap: wrap;
-
         .texto-bb {
-            font-size: 30px;
+            font-size: 25px;
             margin: 0px;
             flex-wrap: wrap;
         }
     }
  }
+
+
 
 //Contacto - nosotros
 .tittleContacto{
